# semantic-state-machine

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  publish.yml  release.yml
src/semantic_state_machine/: __init__.py  state_machine.py
src/state_machine/: state_machine.py
tests/hypothesis/: test_state_machine.py
tests/integration/: test_state_machine.py
tests/unit/: test_state_machine.py
