[project]
name = "semantic-state-machine"
version = "0.3.0"
description = "A lightweight, type-safe Python state machine implementation using modern Python 3.13+ features."
readme = "README.md"
authors = [
    { name = "Richard West", email = "dopplereffect.us@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []
keywords = ["state-machine", "finite-state-machine", "type-safety", "audit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/rjdw/semantic-state-machine"
Repository = "https://github.com/rjdw/semantic-state-machine"
Issues = "https://github.com/rjdw/semantic-state-machine/issues"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-gitignore>=1.3",
    "pytest-html-plus>=0.5.2",
    "pytest-isort>=4.0.0",
    "pytest-randomly>=4.0.1",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.10",
    "ty>=0.0.29",
    "hypothesis>=6.124.0",
    "python-semantic-release>=9.16.1",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "uv build"
major_on_zero = false
